--- a/main.css
+++ b/main.css
@@ -1,27 +1,19 @@
 body{
     background: rgb(255, 255, 255);
     margin:0;
-    padding:0; 
-}
+    padding:0;
 
-a{
     font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: rgb(105, 199, 228);
-    /*text-shadow: 0px 0px 2px rgb(39, 39, 39);*/
-}
-a:hover{
-    /*background:rgb(252, 252, 252);*/
-    color: rgb(58, 110, 126);
-    /*text-shadow: 0px 0px 0px rgb(39, 39, 39);*/
 }
 
-.nav{
-    /*background: black;*/
-    padding: 40px;
+.icon{
+    width:40px;
 }
 
-.link1{
-    padding: 10px;
+
+.header{
+    padding: 300px;
+    background: rgb(20, 20, 20);
+    color: white;
     text-align: center;
 }
