--- a/main.css
+++ b/main.css
@@ -20,37 +20,54 @@ body{
 
 
 .container{
-    margin: auto;
+    margin: 0px 200px;
 }
 
-.grid{
-    margin: 20px 20px;
-    display: grid;
-    text-align: center;
-    grid-template-columns: 1fr 1fr;
-    background: white;
-}
 
 .space{
     margin: 20px;
 }
 
-.grid-about{
+
+
+.projects{
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background:rgb(255, 255, 255);
+    padding: 16px 10px;
+
+    box-shadow: 0px 8px 10px rgb(156, 156, 156);
+}
+
+.project{
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    
+}
+
+.project-header{
     color:rgb(40, 40, 40);
-    height:100px;
     background: rgb(255, 255, 255);
     grid-column-start: 1;
     grid-column-end: 3;
 }
 
-.grid-skills-header{
-    color:rgb(40, 40, 40);
-    background: rgb(255, 255, 255);
-    grid-column-start: 1;
-    grid-column-end: 3;
+.project-image{
+    text-align: center;
+    margin-bottom: 40px;
 }
-.grid-skills{
+img{
+    width: 80%;
+}
+
+.project-desc{
+    text-align: left;
+    padding-left: 16px;
+    margin-bottom: 40px;
     color:rgb(40, 40, 40);
-    height:100px;
-    background: rgb(255, 255, 255);
 }
