--- a/main.css
+++ b/main.css
@@ -29,15 +29,18 @@ img{
     background-color: rgba(0, 0, 0, 0.66);
     background-blend-mode: darken;
     /*height: 100vh;*/
-    padding:35vh 0px;
+    padding:37.4vh 0px;
     /*background:rgb(40, 40, 40);*/
     
     color: rgb(255, 255, 255);
     text-align: center;
 }
+.header h3{
+    color: rgb(255, 255, 255);
+}
 .header-button{
     display: inline-block;
-    margin-top: 80px;
+    margin-top: 30px;
     text-decoration: none;
     background:#ac3b61 ;
     color: white;
@@ -56,17 +59,22 @@ img{
     margin: 20px;
 }
 
-.projects{
-    
-    text-align: center;
+.grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
     background:rgb(255, 255, 255);
+    padding: 0px 40px;
+}
 
-    
+.about{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    padding: 20px 40px;
+    text-align: center;
 }
 
 .project{
+    border-bottom: solid 2px rgba(0, 0, 0, 0.199);
     background:rgb(255, 255, 255);
     grid-column-start: 1;
     grid-column-end: 3;
@@ -74,17 +82,22 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-    margin-top: 20px;
-    padding: 20px 40px;
+    margin-top: 0px;
+    padding: 80px 20px;
 
-    /*box-shadow: 0px 5px 6px rgb(156, 156, 156);*/
 }
 
-.project-header{
-    color:rgb(255, 255, 255);
-    background:#3b86ac;
+.main-header{
+    text-align: center;
+    color:rgb(60, 60, 60);
+    /*background:#3b86ac;*/
+    
     grid-column-start: 1;
     grid-column-end: 3;
+}
+.main-header h1{
+    display: inline-block;
+    border-bottom: solid 3px black;
 }
 
 .project-image{
