--- a/main.css
+++ b/main.css
@@ -28,9 +28,7 @@ img{
     background-image: url('background.jpg');
     background-color: rgba(0, 0, 0, 0.66);
     background-blend-mode: darken;
-    /*height: 100vh;*/
     padding:37.4vh 0px;
-    /*background:rgb(40, 40, 40);*/
     
     color: rgb(255, 255, 255);
     text-align: center;
@@ -87,6 +85,10 @@ img{
 
 }
 
+.project h1, h3{
+    line-height: 40px;
+}
+
 .main-header{
     color:rgb(60, 60, 60);
     grid-column-start: 1;
@@ -100,14 +102,20 @@ img{
     margin-top: 20px;
 }
 
-.project-image{
+.project-left{
     text-align: center;
     background: rgb(255, 255, 255);
 }
-.project-image img{
+.project-left img{
     border: solid 7px rgb(40, 40, 40);;
     border-radius: 9px;
     box-shadow: 1px 3px 8px rgb(46, 46, 46);
+}
+.project-left h1{
+    color: #ac3b61;
+}
+.image{
+    
 }
 
 
@@ -116,12 +124,10 @@ img{
     padding-left: 16px;
     color:rgb(40, 40, 40);
 }
-.project-desc h1{
-    color: #ac3b61;
-}
+
 .project-desc h3{
-    font-size: 1em;
     font-weight: 800;
+    color: rgb(70, 70, 70);
 }
 .project-desc p{
     color: rgb(68, 68, 68);
@@ -142,6 +148,7 @@ img{
 .button{
     display: inline-block;
     margin-right: 10px;
+    margin-top: 20px;
     text-decoration: none;
     background:#ac3b61 ;
     color: white;
