--- a/main.css
+++ b/main.css
@@ -85,6 +85,12 @@ img{
 
 }
 
+@media only screen and (max-width: 780px){
+    .project{
+        grid-template-columns: 1fr;
+    }
+}
+
 .project h1, h3{
     line-height: 40px;
 }
