--- a/main.css
+++ b/main.css
@@ -11,9 +11,25 @@ h1{
     font-weight: 800;
 }
 
-
 p{
     line-height: 150%;
+}
+
+li{
+    font-weight: 550;
+    color: #3B86AC;
+    list-style: none;
+    margin-left: 30px;
+}
+li::before{
+    font-size: 1.8em;
+    content: "\2022";
+    color: #3B86AC;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+    transform: translateY(0.2em);
 }
 
 .icon{
@@ -152,7 +168,7 @@ img{
     margin-left: 30px;
     margin-right: 30px;
 }
-.skills li{
+.skills a{
     margin-bottom: 10px;
     display: inline-block;
     font-size: 0.7em;
