--- a/main.css
+++ b/main.css
@@ -77,13 +77,13 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     background:rgb(255, 255, 255);
-    padding: 0px 40px;
+    padding: 0px 60px;
 }
 
 .about{
     grid-column-start: 1;
     grid-column-end: 3;
-    padding: 20px 40px;
+    padding: 20px 0px;
     text-align: center;
 }
 
@@ -97,13 +97,16 @@ img{
     grid-template-columns: 1fr 1fr;
 
     margin-top: 0px;
-    padding: 80px 20px;
+    padding: 80px 0px;
 
 }
 
 @media only screen and (max-width: 780px){
     .project{
         grid-template-columns: 1fr;
+    }
+    .grid{
+        padding: 0px 20px;
     }
 }
 
