--- a/main.css
+++ b/main.css
@@ -35,6 +35,9 @@ li::before{
 .icon{
     width:40px;
 }
+.icon:hover{
+    filter: brightness(0.6);
+}
 
 img{
     width: 80%;
@@ -144,9 +147,6 @@ img{
 .project-left h1{
     color: #ac3b61;
 }
-.image{
-    
-}
 
 
 .project-desc{
@@ -187,6 +187,7 @@ img{
 }
 
 .button{
+    cursor: pointer;
     display: inline-block;
     margin-right: 10px;
     margin-top: 20px;
@@ -196,7 +197,7 @@ img{
     border-radius: 40%;
     padding: 14px 14px;
     box-shadow: 0px 0px 5px rgb(95, 95, 95);
-    transition-property:box-shadow;
+    transition-property:background;
     
 }
 .button:hover{
@@ -205,3 +206,46 @@ img{
     transition-duration: 150ms;
    
 }
+
+
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
