--- a/main.css
+++ b/main.css
@@ -225,17 +225,17 @@ img{
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 40px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
   }
   
   /* Modal Content */
@@ -286,23 +286,12 @@ img{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
   * {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
-  /*max-width: 1000px;*/
+  max-width: 1400px;
+  padding-bottom:70px;
   position: relative;
   margin: auto;
 }
@@ -342,13 +331,15 @@ img{
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: #2e2e2e;
+  font-size: 20px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  /*-webkit-text-stroke-width: 1px;*/
+  /*-webkit-text-stroke-color: rgb(34, 34, 34);*/
 }
 
 /* Number text (1/3 etc) */
