--- a/main.css
+++ b/main.css
@@ -263,15 +263,6 @@ img{
  
 
 
-
-
-
-
-
-
-
-
-
   * {box-sizing:border-box}
 
 /* Slideshow container */
@@ -331,11 +322,11 @@ img{
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #1b1b1b;
   font-size: 12px;
   padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  /*position: absolute;
+  top: 0;*/
 }
 
 /* The dots/bullets/indicators */
