--- a/main.css
+++ b/main.css
@@ -11,6 +11,13 @@ h1{
     font-weight: 800;
 }
 
+.header-content h1{
+  font-size: 44px;
+}
+.header-content h3{
+  font-size: 22px;
+}
+
 p{
     line-height: 150%;
 }
@@ -120,7 +127,7 @@ img{
 }
 
 .project h1, h3{
-    line-height: 40px;
+    line-height: 30px;
 }
 
 .main-header{
@@ -172,7 +179,7 @@ img{
 }
 .skills{
 
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     margin-top:0px;
     margin-left: 30px;
     margin-right: 30px;
@@ -214,7 +221,7 @@ img{
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 40px;
+    padding-top: 20px;
     left: 0;
     top: 0;
     width: 100%;
@@ -252,7 +259,7 @@ img{
   }
 
   .footer{
-      padding-bottom: 20px;
+      padding-bottom: 40px;
       text-align: center;
       background: rgb(40, 40, 40);
       color: white;
@@ -260,6 +267,12 @@ img{
   }
   .footer h2{
       padding-top: 30px;
+  }
+
+
+  .form{
+    margin: auto;
+    width: 400px;
   }
 
   .email{
@@ -270,43 +283,61 @@ img{
     border:2px solid rgb(59, 134, 172);
     outline: none !important;
     box-shadow: 0 0 4px rgb(59, 134, 172);
+    transition-duration: 240ms;
   }
 
   textarea{
     padding: 8px;
-    width:300px
+    width:100%
   }
   textarea:focus{
     border:1px solid rgb(59, 134, 172);
     outline: none !important;
     box-shadow: 0 0 4px rgb(59, 134, 172);
+    transition-duration: 240ms;
 }
 
 
-  input[type=text]{
-    /*border:none;*/
-    padding: 8px;
-    width:300px
-  }
+
   input[type=email]{
-    /*border:none;*/
+    border: none;
+    border-radius: 3px;
     padding: 8px;
-    width:300px
+    width:100%
   }
 
   .email-send{
+    display: block;
     border: none;
     text-decoration: none;
     background:#ac3b61 ;
     color: white;
     border-radius: 40%;
-    padding: 14px 14px;
+    padding: 10px 20px;
+    margin-left: 8px;
     transition-property:background;
   }
   .email-send:hover{
     background:#7a2a45 ;
     transition-duration: 200ms;
    
+  }
+
+  .footer-back{
+    padding: 10px;
+    background: rgb(26, 26, 26);
+    text-align: center;
+  }
+  .footer-back a{
+    margin: 10px;
+    background: none;
+    color: rgb(170, 170, 170);
+  }
+
+  .footer-back a:hover{
+    margin: 10px;
+    background: none;
+    color: rgb(255, 255, 255);
   }
 
 
@@ -426,7 +457,7 @@ img{
       width: 96%;
     }
     .mySlides {
-      margin-bottom: 40px;
+      margin-bottom: 70px;
     }
 }
 @media only screen and (min-width: 1400px){
