--- a/main.css
+++ b/main.css
@@ -148,9 +148,9 @@ img{
     background: rgb(255, 255, 255);
 }
 .project-left img{
-    border: solid 7px rgb(40, 40, 40);;
-    border-radius: 9px;
-    box-shadow: 1px 3px 8px rgb(46, 46, 46);
+    border: solid 6px rgb(49, 49, 49);
+    border-radius: 3px;
+    box-shadow: 1px 3px 8px rgba(46, 46, 46, 0.575);
 }
 .project-left h1{
     color: #ac3b61;
