--- a/main.css
+++ b/main.css
@@ -288,6 +288,9 @@ img{
     width: 100%;
     max-width: 600px;
   }
+  .form p{
+    line-height: 0.9;
+  }
 
   .email{
     display: block;
@@ -334,6 +337,7 @@ img{
     border-radius: 40%;
     padding: 10px 20px;
     margin-left: 8px;
+    margin-top: 10px;
     transition-property:background;
   }
   .email-send:hover{
