--- a/main.css
+++ b/main.css
@@ -4,14 +4,19 @@ body{
     margin:0;
     padding:0;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1{
     font-weight: 700;
 }
 
+.nav{
+  text-align: left;
+}
+
 .logo{
+  display: inline-block;
   padding: 28px 0px;
   position: relative;
   text-align: left;
@@ -19,6 +24,7 @@ h1{
   width: 300px;
 }
 .logo h1{
+  font-weight: bolder;
   font-size: 44px;
   display: inline-block;
   margin: 0px;
@@ -34,6 +40,18 @@ h1{
   top: 22px;
   display: inline-block;
 }
+
+.menu{
+  display: inline-block;
+}
+.menu a{
+  padding: 20px;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 18px;
+  color: white;
+}
+
 
 .header{
   background-color: #181818;
