--- a/main.css
+++ b/main.css
@@ -67,9 +67,10 @@ a:hover{
 
 .header-content{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding:19vh 0px;
 }
+
 
 .header-content h1{
   font-weight: normal;
@@ -146,27 +147,59 @@ svg{
 }
 
 
+.grid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background:rgb(255, 255, 255);
+  padding: 0px 0px;
+  gap: 120px;
+  margin-top: 120px;
+}
+
+.project{
+  text-align: center;
+}
+
 
 .projects-header{
   background: #2B75BA;
-  padding: 30px 80px;
+  padding: 35px 120px;
 }
 .projects-header h1, p{
   color:white;
   margin: 0px;
-  padding: 15px 0px;
+  padding: 12px 0px;
+}
+.project img{
+  width: 100%;
+}
+.demo{
+  display: inline-block;
+  text-decoration: none;
+  border: none;
+  background: #2B75BA;
+  padding: 10px 20px;
+  margin: 6px;
+  margin-top: 8px;
+  color:white;
+  border-radius: 12px;
+}
+.code{
+  display: inline-block;
+  text-decoration: none;
+  border: none;
+  background: white;
+  padding: 10px 20px;
+  margin: 6px;
+  margin-top: 8px;
+  color:#292929;
+  border: #696969 2px solid;
+  border-radius: 12px;
 }
 
 
 
 
-
-
-
-
-p{
-    line-height: 150%;
-}
 
 li{
     font-weight: 550;
@@ -187,25 +220,11 @@ li::before{
 
 
 
-img{
-    width: 90%;
-}
-
 .mySlides img{
     width:100%;
 }
 
 
-.space{
-    margin: 20px;
-}
-
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background:rgb(255, 255, 255);
-    padding: 0px 4%;
-}
 
 .about{
     grid-column-start: 1;
@@ -214,68 +233,7 @@ img{
     text-align: center;
 }
 
-.project{
-    border-bottom: solid 2px rgba(0, 0, 0, 0.171);
-    background:rgb(255, 255, 255);
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 10px;
-    margin-bottom: 40px;
-    padding: 30px 0px 40px 0px;
-}
 
-.project h1, h3{
-    line-height: 4px;
-}
-.project p{
-  margin-bottom: 60px;
-}
-
-.main-header{
-    color:rgb(60, 60, 60);
-    grid-column-start: 1;
-    grid-column-end: 3;
-    text-align: center;
-}
-
-.project-left{
-    text-align: center;
-    background: rgb(255, 255, 255);
-}
-.project-left img{
-  margin-top: 16px;
-    border: solid 6px rgb(49, 49, 49);
-    border-radius: 3px;
-    box-shadow: 1px 3px 8px rgba(46, 46, 46, 0.575);
-}
-.project-left h1{
-    color: #ac3b61;
-}
-
-
-.project-desc{
-  margin-top: 10px;
-  text-align: left;
-  padding-left: 16px;
-  color:rgb(40, 40, 40);
-}
-
-.project-desc h3{
-    font-weight: 800;
-    color: rgb(70, 70, 70);
-}
-.project-desc p{
-    color: rgb(68, 68, 68);
-}
-
-.project-left h3{
-    margin-top: 40px;
-    margin-bottom: 20px;
-    font-weight: 800;
-    color: rgb(70, 70, 70);
-}
 .skills{
 
     margin-bottom: 10px;
@@ -564,8 +522,13 @@ img{
   to {opacity: 1}
 }
 
+.space{
+  padding-left: 240px;
+  padding-right: 240px;
+}
 
-@media only screen and (max-width: 920px){
+
+/*@media only screen and (max-width: 920px){
     .project{
         grid-template-columns: 1fr;
     }
@@ -594,4 +557,4 @@ img{
       padding-left:14%;
       padding-right:14%;
     }
-}
+}*/
