--- a/main.css
+++ b/main.css
@@ -152,7 +152,7 @@ svg{
   grid-template-columns: repeat(3, 1fr);
   background:rgb(255, 255, 255);
   padding: 0px 0px;
-  gap: 120px;
+  gap: 80px;
   margin-top: 120px;
 }
 
@@ -197,26 +197,16 @@ svg{
   border-radius: 12px;
 }
 
-
-
-
-
-li{
-    font-weight: 550;
-    color: #3B86AC;
-    list-style: none;
-    margin-left: 30px;
+.demo:hover{
+  background: #163d61;
+  color: white;
 }
-li::before{
-    font-size: 1.8em;
-    content: "\2022";
-    color: #3B86AC;
-    font-weight: bold;
-    display: inline-block; 
-    width: 1em;
-    margin-left: -1em;
-    transform: translateY(0.2em);
+.code:hover{
+  background: #696969;
+  color: white;
 }
+
+
 
 
 
@@ -424,85 +414,7 @@ li::before{
 
   * {box-sizing:border-box}
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1400px;
-  padding-bottom:70px;
-  position: relative;
-  margin: auto;
-}
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-  margin-bottom: 40px;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  background:rgb(168, 168, 168) ;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #2e2e2e;
-  font-size: 20px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-  /*-webkit-text-stroke-width: 1px;*/
-  /*-webkit-text-stroke-color: rgb(34, 34, 34);*/
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #1b1b1b;
-  font-size: 12px;
-  padding: 8px 12px;
-  /*position: absolute;
-  top: 0;*/
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
 
 /* Fading animation */
 .fade {
@@ -528,33 +440,38 @@ li::before{
 }
 
 
-/*@media only screen and (max-width: 920px){
-    .project{
-        grid-template-columns: 1fr;
-    }
-    .grid{
-        padding: 0px 20px;
-    }
-    .mySlides {
-        margin-bottom: 200px;
-    }
-    .modal-content {
-      padding: 10px;
-      width: 96%;
-    }
-    .mySlides {
-      margin-bottom: 70px;
-    }
-    .contact{
-      grid-template-columns: 1fr;
-    }
+@media only screen and (max-width: 1300px){
+  .space{
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .grid{
+    gap: 60px 40px;
+  }
+  .contact{
+    grid-template-columns: 1fr;
+  }
 }
-@media only screen and (min-width: 1400px){
+@media only screen and (max-width: 1000px){
     .grid{
-        padding: 0px 14%;
+      grid-template-columns: 1fr 1fr;
     }
     .contact{
       padding-left:14%;
       padding-right:14%;
     }
-}*/
+}
+@media only screen and (max-width: 700px){
+  .space{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .grid{
+    grid-template-columns: 1fr;
+  }
+  .contact{
+    padding-left:14%;
+    padding-right:14%;
+  }
+}
