--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body{
 
 
 header{
+  z-index: 10;
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -198,7 +199,7 @@ svg{
   background: #2B75BA;
   padding: 35px 120px;
 }
-.projects-header h1, p{
+.projects-header h1, p, a{
   color:white;
   margin: 0px;
   padding: 12px 0px;
@@ -207,28 +208,61 @@ svg{
 .project{
   text-align: center;
 }
-.project h3, p{
-  color: rgb(255, 255, 255)
+.project  h3, p, a{
+  color: rgba(128, 128, 128, 0);
+  font-weight: normal;
+}
+.skills a{
+  color: rgba(255, 0, 0, 0);
+}
+.project h3{
+  font-size: 30px;
 }
 .project > div{
   position: relative;
 }
 
 .project-content{
-  display: none;
+  display: inline-block;
   position: absolute;
-  top: 54px;
+  top: 0px;
   left: 0px;
   text-align: center;
   width: 100%;
+  height: 100%;
+  padding: 40px;
 }
-.project-content:hover, .project-img:hover  ~.project-content{
-  transition: 100ms ease;
-  display: block;
+.project-content:hover{
+  transition-duration: 200ms;
+  background: rgba(0, 0, 0, 0.822);
 }
-.project-img:hover{
-  filter: brightness(0.4);
+.project-content:hover h3, a{
+  transition-duration: 200ms;
+  color: rgb(255, 255, 255);
 }
+.project-content:hover a{
+  transition-duration: 200ms;
+  background:rgb(94, 94, 94);
+  color: rgb(255, 255, 255);
+}
+
+
+.skills{
+  margin-bottom: 0px;
+  margin-top:0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.skills a{
+  margin-bottom: 10px;
+  display: inline-block;
+  font-size: 80%;
+  width: 45px;
+  line-height: 2px;
+  margin-right: 3px;
+  border-radius: 40%;
+}
+
 
 .project img{
   width: 100%;
@@ -283,23 +317,6 @@ svg{
     text-align: center;
 }
 
-
-.skills{
-
-    margin-bottom: 10px;
-    margin-top:0px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-.skills a{
-    margin-bottom: 10px;
-    display: inline-block;
-    font-size: 0.7em;
-    padding: 8px 10px;
-    margin-right: 8px;
-    background:rgb(219, 219, 219);
-    border-radius: 40%;
-}
 
 .button{
     cursor: pointer;
@@ -501,8 +518,11 @@ svg{
 
 @media only screen and (max-width: 1700px){
   .space{
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  .grid{
+    gap: 80px 60px;
   }
   svg{
     width: 300px;
@@ -513,6 +533,21 @@ svg{
 }
 
 @media only screen and (max-width: 1300px){
+  .project h3{
+    font-size: 20px;
+  }
+  .project-content{
+    padding: 28px;
+  }
+  .skills a{
+    display: inline-block;
+    font-size: 80%;
+    width: 35px;
+    line-height: 0px;
+    margin-right: 2px;
+    border-radius: 40%;
+    font-size: 12px;
+  }
   .space{
     padding-left: 60px;
     padding-right: 60px;
@@ -656,6 +691,22 @@ svg{
     }
 }
 @media only screen and (max-width: 700px){
+  .project h3{
+    font-size: 34px;
+  }
+  .project-content{
+    padding: 40px;
+  }
+  .skills a{
+    display: inline-block;
+    font-size: 80%;
+    width: 35px;
+    line-height: 0px;
+    margin-right: 2px;
+    border-radius: 40%;
+    font-size: 12px;
+  }
+
   .header-content{
     display: block;
     padding-top: 160px;
