--- a/main.css
+++ b/main.css
@@ -586,11 +586,12 @@ svg{
   }
 
   nav{
-    display: none;
+    display: block;
     position: absolute;
     top: 50px;
     right: -700px;
     margin-top: 0px;
+    
   }
 
   header{
@@ -641,6 +642,7 @@ svg{
       width: 100%;
       height: 2px;
       background: inherit;
+      
   }
   .hamburger > div::after{
       top: 12px;
