added my projects

--- a/main.css
+++ b/main.css
@@ -396,7 +396,8 @@ svg{
     padding-left:4%;
     padding-right:4%;
 
-    padding-top: 260px;
+    padding-top: 340px;
+    padding-bottom: 200px;
 
     color: rgb(255, 255, 255);
 
