--- a/main.css
+++ b/main.css
@@ -613,7 +613,7 @@ input[type=email]:focus{
     margin-top: 30px;
     display: block;
     text-align: center;
-    
+    font-size: 16px;
   }
   svg{
     width: 380px;
