--- a/main.css
+++ b/main.css
@@ -58,7 +58,16 @@ nav a{
   font-size: 20px;
   text-decoration: none;
   color: rgb(226, 226, 226);
+  padding:8px 10px;
 }
+
+.active{
+  transition-duration: 300ms;
+  background: #296fb1;
+  border-radius: 3px;
+  color:white;
+}
+
 a:hover{
   transition: 200ms;
   color: #7c7c7c;
@@ -604,7 +613,7 @@ input[type=email]:focus{
     font-size: 20px;
   }
   .header-button{
-    margin: 0px 100px;
+    margin: 0px 80px;
     margin-top: 30px;
     display: block;
     text-align: center;
