--- a/main.css
+++ b/main.css
@@ -19,10 +19,25 @@ body{
 }
 
 .modal{
+  position: relative;
   background: rgb(255, 255, 255);
   height: 100%;
   margin: 0px;
 }
+
+#close{
+  position: absolute;
+  right: 24px;
+  top: 12px;
+  color:rgb(59, 59, 59);
+  border: none;
+  background: none;
+  font-size: 40px;
+}
+#close:hover{
+  cursor: pointer;
+}
+
 
 .hide{
   display: none;
